[package]
name = "weave-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["cargo"] }
glob = "0.3.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
regex = "1.10.3"
tokio = { version = "1", features = ["full"] }
crossterm = "0.27.0"
tokio-stream = "0.1.14"
tokio-util = {  version = "0.7.10", features = ["codec"] }
serde_json = "1.0.114"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[target.i686-pc-windows-gnu]
linker = "i686-w64-mingw32-gcc"
